# naoqi_bridge

./: .gitignore  CHANGELOG.rst  CMakeLists.txt  README.md  package.xml  setup.py
cfg/: NaoCamera.cfg
cmake/: FindNAOqi.cmake
launch/: camera.launch  nodelet_pipeline.launch  nodelet_standalone.launch  python.launch  sonar.launch
nao_sensors/: CHANGELOG.rst  README.rst  package.xml
nao_sensors/cfg/: NaoCamera.cfg  NaoMicrophone.cfg
nao_sensors/launch/: camera.launch  microphone.launch  nodelet_manager.launch  nodelet_pipeline.launch  octomap.launch
nao_sensors/nodes/: octomap.py  sonar.py
nao_sensors/share/: nao_camera_top_320x240.yaml  nao_camera_top_640x480.yaml
nao_sensors/src/: nao_camera.cpp  nao_camera.h  nao_node.cpp  nao_node.h  nodelet.cpp
nao_sensors/src/nao_sensors/: ros_sonar.py  vision_definitions.py
naoqi_apps/: CHANGELOG.rst  CMakeLists.txt  package.xml
naoqi_apps/launch/: background_movement.launch  basic_awareness.launch  behavior_manager.launch  engagement_zones.launch  externalCollisionAvoidance.launch  external_collision_avoidance.launch  face_characteristics.launch  face_detection.launch  gaze_analysis.launch  leds.launch  listening_movement.launch  locomotionControl.launch  locomotion_control.launch  people_perception.launch  people_perception_topic.launch  photoCapture.launch  photo_capture.launch  soundLocalization.launch  sound_localization.launch  speech.launch  speech_recognition.launch  system.launch  tablet.launch  tactile.launch  tracker.launch
naoqi_apps/nodes/: naoqi_background_movement.py  naoqi_basic_awareness.py  naoqi_behavior_manager.py  naoqi_engagement_zones.py  naoqi_externalCollisionAvoidance.py  naoqi_external_collision_avoidance.py  naoqi_face_characteristics.py  naoqi_face_detection.py  naoqi_gaze_analysis.py  naoqi_leds.py  naoqi_listening_movement.py  naoqi_locomotionControl.py  naoqi_locomotion_control.py  naoqi_people_perception.py  naoqi_people_perception_topic.py  naoqi_photoCapture.py  naoqi_photo_capture.py  naoqi_soundLocalization.py  naoqi_sound_localization.py  naoqi_speech.py  naoqi_speech_recognition.py  naoqi_system.py  naoqi_tablet.py  naoqi_tactile.py  naoqi_tracker.py
naoqi_bridge/: CHANGELOG.rst  CMakeLists.txt  package.xml
naoqi_driver/: CHANGELOG.rst  CMakeLists.txt  naoqi_analyzer_plugins.xml  package.xml
naoqi_driver/cmake/: FindNAOqi.cmake  cmake_modules-extras.cmake.installspace.in
naoqi_driver/include/naoqi_driver/: naoqi_node.h
naoqi_driver/launch/: naoqi_driver.launch  naoqi_driver_cpp.launch
naoqi_driver/nodes/: naoqi_controller.py  naoqi_joint_states.py  naoqi_logger.py  naoqi_moveto.py
naoqi_driver/src/: naoqi_joint_states.cpp  naoqi_node.cpp
naoqi_driver/src/naoqi_driver/: __init__.py  naoqi_moveto.py  naoqi_node.py
naoqi_driver_py/: CHANGELOG.rst  CMakeLists.txt  package.xml  setup.py
naoqi_driver_py/cfg/: NaoqiSpeech.cfg
naoqi_driver_py/launch/: naoqi_driver.launch
naoqi_driver_py/nodes/: naoqi_joint_states.py  naoqi_moveto.py
naoqi_driver_py/src/: naoqi_joint_states.cpp  naoqi_joints_analyzer.cpp  naoqi_joints_analyzer.h
naoqi_driver_py/src/naoqi_driver/: naoqi_moveto.py  naoqi_node.py
naoqi_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
naoqi_msgs/action/: JointAnglesWithSpeed.action
naoqi_msgs/msg/: FaceDetection.msg  FaceInfo.msg
naoqi_navigation/: README.md
naoqi_navigation/python/: CHANGELOG.rst  CMakeLists.txt  navigation_config.rviz  package.xml
naoqi_navigation/python/launch/: exploration.launch  loading_map.launch  navigation.launch  navigation_full_rviz.launch  rviz_pepper.launch
naoqi_navigation/python/nodes/: exploration.py  loading_map.py  localization.py  pod.py
naoqi_pose/: CHANGELOG.rst  CMakeLists.txt  package.xml
naoqi_pose/launch/: pose_manager.launch
naoqi_pose/nodes/: pose_controller.py
naoqi_robot/: CMakeLists.txt  package.xml
naoqi_sensors/: CHANGELOG.rst  CMakeLists.txt  naoqicamera_nodelet.xml  package.xml
naoqi_sensors/cfg/: NaoqiCamera.cfg  NaoqiMicrophone.cfg
naoqi_sensors/launch/: camera.launch  nodelet_manager.launch  nodelet_pipeline.launch  octomap.launch  sonar.launch
naoqi_sensors/nodes/: camera.py  contact.py  face_detection.py  microphone.py  octomap.py  sonar.py
naoqi_sensors/src/: CMakeLists.txt  nao_camera_node.cpp  naoqi_camera.cpp  naoqi_camera.h
naoqi_sensors/src/naoqi_sensors/: naoqi_camera.py  naoqi_face_detection.py  naoqi_microphone.py  naoqi_sonar.py
naoqi_sensors/src/python_boost/: CMakeLists.txt
naoqi_sensors_py/: CHANGELOG.rst  CMakeLists.txt  naoqicamera_nodelet.xml  package.xml  setup.py
naoqi_sensors_py/cfg/: NaoqiCamera.cfg  NaoqiMicrophone.cfg
naoqi_sensors_py/launch/: camera.launch  microphone.launch  nodelet_standalone.launch  octomap.launch  sonar.launch
naoqi_sensors_py/nodes/: camera.py  contact.py  microphone.py  octomap.py
naoqi_sensors_py/share/: nao_camera_bottom_160x120.yaml  nao_camera_bottom_640x480.yaml  nao_camera_top_160x120.yaml
naoqi_sensors_py/src/: naoqi_camera.cpp  naoqi_camera.h  naoqi_camera_node.cpp  nodelet.cpp
naoqi_sensors_py/src/naoqi_sensors/: naoqi_camera.py  naoqi_microphone.py  naoqi_sonar.py  vision_definitions.py
naoqi_sensors_py/src/python_boost/: octomap_python.cpp
naoqi_tools/: CHANGELOG.rst  CMakeLists.txt  README.rst  package.xml  setup.py
naoqi_tools/scripts/: README_export_meshes.py.rst  README_generate_urdf.py.rst  README_run_blender_script.py.rst  compare_xacro.py  export_meshes.py  generate_urdf.py  run_blender_script.py
naoqi_tools/scripts/blender/: io_export_collision.py  io_export_ogre.py  io_export_selected.py  io_export_visual.py  normalize_meshes.py
naoqi_tools/scripts/xmldiff/: xmldiff.py
naoqi_tools/src/naoqi_tools/: gazeboUrdf.py  nao_dictionaries.py  pepper_dictionaries.py  romeo_dictionaries.py  urdf.py
nodes/: camera.py  nao_sonar.py  octomap.py  ros_sonar.py  sonar.py
python/nodes/: nao_camera_node.py
share/: nao_camera_bottom_320x240.yaml
src/: nao_camera.cpp  nao_camera.h
src/nao_sensors/: ros_sonar.py
src/python_boost/: CMakeLists.txt
(+2 files in other folders)
