<package>
  <name>naoqi_bridge</name>
  <version>0.4.4</version>
  <description>Meta package to interface ROS with Aldebaran's NAOqi.</description>
  <author>Vincent Rabaud</author>
  <maintainer email="vincent.rabaud@gmail.com">Vincent Rabaud</maintainer>
  <license>BSD</license>
  
  <url type="website">http://www.ros.org/nao</url>

  <buildtool_depend>catkin</buildtool_depend>
  
  <run_depend>naoqi_driver</run_depend>
  <run_depend>naoqi_msgs</run_depend>
  <run_depend>naoqi_sensors</run_depend>

  <export>
    <metapackage/>
  </export>

</package>
