<package>
  <name>naoqi_pose</name>
  <version>0.5.3</version>
  <description>
      <p>
          This package contains nodes for managing Nao's poses.
    </p>
  </description>
  <maintainer email="severin.lemaignan@epfl.ch">Séverin Lemaignan</maintainer>
  <license>BSD</license>

  <url>http://ros.org/wiki/naoqi_pose</url>
  <url type="bugtracker">https://github.com/ros-naoqi/naoqi_bridge/issues</url>
  <url type="repository">https://github.com/ros-naoqi/naoqi_bridge</url>
  <author>Armin Hornung</author>
  <author>Séverin Lemaignan</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>actionlib</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>naoqi_bridge_msgs</run_depend>
  <run_depend>trajectory_msgs</run_depend>

  <conflict>nao_pose</conflict>
</package>
