<package>
  <name>naoqi_sensors</name>
  <version>0.4.2</version>

  <description>
    ROS driver for miscellaneous sensors on NAO.
    Python bindings for camera, sonar and octomap
    C++: bindings for camera only (requires NAOqi to build)
  </description>

  <author>Séverin Lemaignan</author>
  <author>Vincent Rabaud</author>
  <author>Karsten Knese</author>
  <author>Jack O'Quin</author>
  <author>Ken Tossell</author>
  <author>Patrick Beeson</author>
  <author>Nate Koenig</author>
  <author>Andrew Howard</author>
  <author>Damien Douxchamps</author>
  <author>Dan Dennedy</author>
  <author>Daniel Maier</author>

  <maintainer email="severin.lemaignan@epfl.ch">Séverin Lemaignan</maintainer>
  <maintainer email="vincent.rabaud@gmail.com">Vincent Rabaud</maintainer>
  <license>LGPL and Apache2</license>

  <url type="website">http://ros.org/nao</url>
  <url type="bugtracker">https://github.com/ros-nao/naoqi_sensors/issues</url>
  <url type="repository">https://github.com/ros-nao/naoqi_sensors.git</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>boost</build_depend>
  <build_depend>camera_info_manager</build_depend>
  <build_depend>diagnostic_updater</build_depend>
  <build_depend>driver_base</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>naoqi_driver</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>octomap</build_depend>
  <build_depend>octomap_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tf</build_depend>


  <run_depend>boost</run_depend>
  <run_depend>camera_info_manager</run_depend>
  <run_depend>camera_info_manager_py</run_depend>
  <run_depend>diagnostic_updater</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>naoqi_driver</run_depend>
  <run_depend>nodelet</run_depend>
  <run_depend>octomap</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>tf</run_depend>

  <conflict>nao_sensors</conflict>

  <export>
      <nodelet plugin="${prefix}/naoqicamera_nodelet.xml"/>
  </export>

</package>
