<package>
  <name>naoqi_tools</name>
  <version>0.5.5</version>

  <description>
    Set of tools provided by Aldebaran to convert Aldebaran files (URDF, blender...)
  </description>

  <author>Mikael Arguedas</author>
  <maintainer email="surya.ambrose@gmail.com">Surya Ambrose</maintainer>

  <license>BSD</license>

  <url>http://www.ros.org/wiki/naoqi_tools</url>
  <url type="bugtracker">https://github.com/ros-naoqi/naoqi_bridge/issues</url>
  <url type="repository">https://github.com/ros-naoqi/naoqi_bridge</url>

  <buildtool_depend>catkin</buildtool_depend>

</package>
