<?xml version="1.0"?>
<package>
  <name>naoqi_navigation</name>
  <version>0.0.1</version>
  <description>The naoqi_navigation package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="lsouchet@aldebaran.com">Lucas Souchet</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>naoqi_sensors_py</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>octomap_msgs</build_depend>
  <build_depend>message_runtime</build_depend>

  <run_depend>naoqi_sensors_py</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>message_runtime</run_depend>

  <export>
  </export>
</package>
